--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+        "lib/**/*.jar",
+        "/Users/sanvit/Downloads/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31.jar"
     ],
     "java.debug.settings.onBuildFailureProceed": true
 }
